syntax = "proto3";

option go_package = ".;pb";

package grpc.golang;

message UserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string created_at = 5;
    string updated_at = 6;
}

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse) {};
}
